Fix link color to improve contrast in dark mode

--- a/style.css
+++ b/style.css
@@ -241,7 +241,9 @@ td {
         white-space: nowrap;
     }
 
-
+    a, a:visited {
+      color: #96ceff;
+    }
 }
 
 @media (max-width: 800px) {
